<resources>
    <string name="app_name">Pawmate</string>
    <string name="Email">E-mail</string>
    <string name="login">Login</string>
    <string name="usercode">Usercode*:</string>
    <string name="exp1">*\"Usercode will be sent to your email when your membership is approved.</string>
    <string name="sorry_i_m_new"><u>Sorry, I\'m new</u></string>
    <string name="i_forgot_something_please_let_me_in"><u>I forgot something please let me in</u></string>
    <string name="who_are_you_people"><u>Who are you people</u></string>
</resources>
