<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alper.pawmate2.feature.Login"
    android:background="#fff">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        app:srcCompat="@drawable/pawmate" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignTop="@+id/emailInput"
        android:text="@string/Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="E-mail:" />

    <EditText
        android:id="@+id/usercodeInput"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignEnd="@+id/emailInput"
        android:layout_below="@+id/emailInput"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/usercode"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/email"
        android:layout_alignTop="@+id/usercodeInput"
        android:text="@string/usercode"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="Usercode*:" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_above="@+id/exp1"
        android:layout_marginBottom="29dp"
        android:layout_toEndOf="@+id/exp1"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/exp1"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_above="@+id/imageView"
        android:layout_alignStart="@+id/usercode"
        android:layout_marginBottom="14dp"
        android:text="@string/exp1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        tools:text='*"Usercode will be sent to your email when your membership is approved.' />

    <TextView
        android:id="@+id/signUpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usercode"
        android:layout_below="@+id/usercode"
        android:layout_marginTop="25dp"
        android:text="@string/sorry_i_m_new"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/forgotP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signUpp"
        android:layout_below="@+id/signUpp"
        android:text="@string/i_forgot_something_please_let_me_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/projExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/forgotP"
        android:layout_below="@+id/forgotP"
        android:text="@string/who_are_you_people"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"/>

</RelativeLayout>
